# charge-over-http-cpp

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: codeql.yml
lib/battery/: battery.cpp
lib/battery/include/: battery.hpp
lib/client/: client.cpp
lib/client/include/: client.hpp
lib/json-object/: json-object.cpp
lib/json-object/include/: json-object.hpp
lib/server/: server.cpp
lib/server/include/: server.hpp
src/: client.cpp  main.cpp  server.cpp
tests/: insepct.cpp  stress.sh  test-json-creation.cpp
